SERVER-20294 Update ShardRegistry on-demand on changes to shard replica set membership